--- a/nodejsupermacy/package.json
+++ b/nodejsupermacy/package.json
@@ -3,8 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev": "nodemon index.ts",
+    "start": "node ."
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12"
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.12",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.14.0",
+    "typescript": "4.9.5"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
