--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -5,5 +5,26 @@ services:
     ports:
       - target: 8000
         published: 8000
+    environment:
+      DISABLE_NEST_ASYNCIO: True
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_ADDRESS: postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
+
   postgres:
     image: "postgres"
+    ports:
+      - '5432:5432'
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 2s
+      timeout: 5s
+      retries: 5
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
