--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.6.0
 anyio==4.3.0
+async-timeout==4.0.3
+asyncpg==0.29.0
 certifi==2024.2.2
 click==8.1.7
 dnspython==2.6.1
@@ -15,6 +17,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+nest-asyncio==1.6.0
 orjson==3.10.3
 pydantic==2.7.1
 pydantic_core==2.18.2
