--- a/nodejsupermacy/package.json
+++ b/nodejsupermacy/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon index.ts",
-    "start": "node ."
+    "start": "node .",
+    "docker-dev": "prisma db push && nodemon index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -14,6 +15,7 @@
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.0",
     "prisma": "^5.14.0",
+    "ts-node": "^10.9.2",
     "typescript": "4.9.5"
   },
   "dependencies": {
