--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.11
 COPY . .
 RUN pip install -r requirements.txt
 WORKDIR app
-CMD ["uvicorn", "main:app","--host", "0.0.0.0"]
+CMD ["uvicorn", "main:app","--host", "0.0.0.0", "--loop", "asyncio"]
