--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -8,7 +8,7 @@ services:
     environment:
       DISABLE_NEST_ASYNCIO: True
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
+      PGUSER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_ADDRESS: postgres
     depends_on:
@@ -17,14 +17,21 @@ services:
 
   postgres:
     image: "postgres"
+    container_name: unit_db
+    volumes:
+      - unit:/home/postgres_data
     ports:
       - '5432:5432'
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: [ "CMD-SHELL", "pg_isready", "-q", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
       interval: 2s
       timeout: 5s
       retries: 5
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
+      PGUSER: ${POSTGRES_USER}
+
+volumes:
+  unit:
+    external: true
