--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.17.0
 annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
@@ -13,6 +14,7 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iso8601==1.1.0
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -22,13 +24,16 @@ orjson==3.10.3
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
+pypika-tortoise==0.1.6
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
+tortoise-orm==0.20.1
 typer==0.12.3
 typing_extensions==4.11.0
 ujson==5.10.0
