--- a/nodejsupermacy/package.json
+++ b/nodejsupermacy/package.json
@@ -10,6 +10,7 @@
     "docker-dev": "prisma db push && nodemon index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
