--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,7 +4,9 @@ anyio==4.3.0
 async-timeout==4.0.3
 asyncpg==0.29.0
 certifi==2024.2.2
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.7
 dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.111.0
@@ -16,11 +18,13 @@ httpx==0.27.0
 idna==3.7
 iso8601==1.1.0
 Jinja2==3.1.4
+jwt==1.3.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 nest-asyncio==1.6.0
 orjson==3.10.3
+pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
