--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       PGUSER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_ADDRESS: postgres
+      BASE_URL_SHOP: ''
     depends_on:
       postgres:
         condition: service_healthy
